--- a/sidm-results-cosmos.Rmd
+++ b/sidm-results-cosmos.Rmd
@@ -2,7 +2,9 @@
 title: "Lung emergency presentation in Cosmos"
 author: "Andrew Zimolzak"
 date: "`r Sys.Date()`"
-output: pdf_document
+output:
+  word_document: default
+  pdf_document: default
 ---
 
 ```{r libs, include=FALSE}
